clusters/cluster-1/homeautomation/frigate/frigate.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: https://auth.tallflix.ca/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.tallflix.ca/oauth2/start?rd=$scheme://$best_http_host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Preferred-Username"
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout: "3600"
    nginx.org/websocket-services: "frigate"
  labels:
    app.kubernetes.io/name: frigate
  name: frigate
  namespace: default
  # resourceVersion: "113920484"
  # uid: b12f9fed-0bf0-45ef-a840-94519c30bc29
spec:
  rules:
  - host: frigate.tallflix.ca
    http:
      paths:
      - backend:
          service:
            name: frigate
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - frigate.tallflix.ca
    secretName: frigate-tls
status:
  loadBalancer:
    ingress:
    - ip: 10.10.10.60
